// Vitest Snapshot v1

exports[`<RemoveSubtraction /> > should render when [show=%p] false 1`] = `
<RemoveModal
  id="foo"
  name="Foo"
  noun="Subtraction"
  onConfirm={[Function]}
  onHide={[MockFunction spy]}
  show={false}
/>
`;

exports[`<RemoveSubtraction /> > should render when [show=%p] true 1`] = `
<RemoveModal
  id="foo"
  name="Foo"
  noun="Subtraction"
  onConfirm={[Function]}
  onHide={[MockFunction spy]}
  show={true}
/>
`;
